[gd_scene load_steps=30 format=3 uid="uid://d30b2qwpstgt4"]

[ext_resource type="Script" path="res://scripts/player_mul.gd" id="1_ep8rt"]
[ext_resource type="PackedScene" uid="uid://cua0jhtddpgu3" path="res://nodes/very_cool_buttons/very_cool_block_button.tscn" id="3_mim8e"]
[ext_resource type="AudioStream" uid="uid://ceqtyf8i6pfjq" path="res://media/sfx/big_fireball.wav" id="4_82uu1"]
[ext_resource type="AudioStream" uid="uid://cs2av37h3qptr" path="res://media/sfx/block.wav" id="4_ifsn1"]
[ext_resource type="Texture2D" uid="uid://c8ci17o62bjjg" path="res://media/FirstChar/FirstChar_block_color.png" id="4_qfw1n"]
[ext_resource type="PackedScene" uid="uid://bbcwbus8mbbec" path="res://nodes/very_cool_buttons/very_cool_big_fireball_button.tscn" id="4_s4ucm"]
[ext_resource type="Texture2D" uid="uid://dc3shpkjxt0c2" path="res://media/FirstChar/FirstChar_charge_color.png" id="6_4c8i3"]
[ext_resource type="PackedScene" uid="uid://clsmp4hvp8olb" path="res://nodes/very_cool_buttons/very_cool_double_fireball_button.tscn" id="6_fo5cf"]
[ext_resource type="AudioStream" uid="uid://bocx334wnhp3u" path="res://media/sfx/charge01.wav" id="6_iugao"]
[ext_resource type="PackedScene" uid="uid://cr7oyuywcdt5v" path="res://nodes/very_cool_buttons/very_cool_heart_charge_button.tscn" id="7_ucawa"]
[ext_resource type="Texture2D" uid="uid://dwwkvmtef7cqy" path="res://media/FirstChar/FirstChar_hitted_color.png" id="8_c3p1c"]
[ext_resource type="Texture2D" uid="uid://dctbsxjcvn1hm" path="res://media/FirstChar/FirstChar_fireball_color.png" id="8_rtwa8"]
[ext_resource type="AudioStream" uid="uid://ntpovytul8qr" path="res://media/sfx/boss_damaged.wav" id="9_ag5du"]
[ext_resource type="Texture2D" uid="uid://cn45jrmt425rr" path="res://media/FirstChar/FirstChar_idle.png" id="10_bm8lq"]
[ext_resource type="PackedScene" uid="uid://b732gs6p4vb3i" path="res://nodes/charge_meter.tscn" id="10_dnqw3"]
[ext_resource type="PackedScene" uid="uid://km0bq0gsqwmw" path="res://nodes/very_cool_buttons/very_cool_fireball_button.tscn" id="12_7db1n"]
[ext_resource type="AudioStream" uid="uid://dr2dk0uksccql" path="res://media/sfx/laser_start02.wav" id="17_s0lph"]
[ext_resource type="PackedScene" uid="uid://x56vsw8e3d8j" path="res://nodes/heart_charge_icon.tscn" id="18_lxxk7"]

[sub_resource type="Animation" id="Animation_0vekx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("10_bm8lq")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/ColorRect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-203, 276)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite/ColorRect:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.235294, 0.74902, 0.423529, 0.454902)]
}

[sub_resource type="Animation" id="Animation_lptgh"]
resource_name = "big_fireball"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_rtwa8")]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_82uu1")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_l5ppu"]
resource_name = "block"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_qfw1n")]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_ifsn1")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/ColorRect:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.207843, 0.721569, 0.705882, 0.454902)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite/ColorRect:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-203, 276), Vector2(-203, -322)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite:offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -20), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_pfoks"]
resource_name = "charge"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_4c8i3")]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("6_iugao")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/ColorRect:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-203, 276), Vector2(-203, -343)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite/ColorRect:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.942774, 0.847968, 0.328243, 0.454902)]
}

[sub_resource type="Animation" id="Animation_oeo50"]
resource_name = "double_fireball"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("8_rtwa8"), ExtResource("10_bm8lq"), ExtResource("8_rtwa8")]
}

[sub_resource type="Animation" id="Animation_n7kqx"]
resource_name = "fireball"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_rtwa8")]
}

[sub_resource type="Animation" id="Animation_wxit1"]
resource_name = "heart_charge"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_4c8i3")]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("17_s0lph")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/ColorRect:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-203, 276), Vector2(-203, -343)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite/ColorRect:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.942774, 0.847968, 0.328243, 0.454902)]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_spawn_heart_charge"
}]
}

[sub_resource type="Animation" id="Animation_m2n50"]
resource_name = "hitted"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_c3p1c")]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.456388,
"start_offset": 0.0,
"stream": ExtResource("9_ag5du")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.831373, 0.239216, 0.282353, 1), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-100, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_tv0p2"]
resource_name = "idle"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("10_bm8lq")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wq4l7"]
_data = {
"RESET": SubResource("Animation_0vekx"),
"big_fireball": SubResource("Animation_lptgh"),
"block": SubResource("Animation_l5ppu"),
"charge": SubResource("Animation_pfoks"),
"double_fireball": SubResource("Animation_oeo50"),
"fireball": SubResource("Animation_n7kqx"),
"heart_charge": SubResource("Animation_wxit1"),
"hitted": SubResource("Animation_m2n50"),
"idle": SubResource("Animation_tv0p2")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1yon4"]
size = Vector2(152, 454)

[node name="Player" type="Node2D"]
script = ExtResource("1_ep8rt")

[node name="CanvasLayerPublic" type="CanvasLayer" parent="."]

[node name="HeartChargeIcon" parent="CanvasLayerPublic" instance=ExtResource("18_lxxk7")]
position = Vector2(688, 72)
scale = Vector2(0.5, 0.5)

[node name="ChargeMeter" parent="CanvasLayerPublic" instance=ExtResource("10_dnqw3")]
unique_name_in_owner = true
position = Vector2(16, 16)

[node name="AvatarPanel" type="Panel" parent="CanvasLayerPublic"]
offset_left = 16.0
offset_top = 128.0
offset_right = 78.0
offset_bottom = 190.0
metadata/_edit_group_ = true

[node name="AvatarTexture" type="TextureRect" parent="CanvasLayerPublic/AvatarPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Buttons" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 464.0
offset_top = 424.0
offset_right = 464.0
offset_bottom = 424.0

[node name="FireballButton" parent="CanvasLayer/Buttons" instance=ExtResource("12_7db1n")]
layout_mode = 0
offset_left = 88.0
offset_top = 376.0
offset_right = 600.0
offset_bottom = 888.0
scale = Vector2(0.25, 0.25)

[node name="BlockButton" parent="CanvasLayer/Buttons" instance=ExtResource("3_mim8e")]
layout_mode = 0
offset_left = 88.0
offset_top = 512.0
offset_right = 600.0
offset_bottom = 1024.0
scale = Vector2(0.25, 0.25)

[node name="BigFireBallButton" parent="CanvasLayer/Buttons" instance=ExtResource("4_s4ucm")]
layout_mode = 0
offset_left = 376.0
offset_top = 376.0
offset_right = 888.0
offset_bottom = 888.0
scale = Vector2(0.25, 0.25)

[node name="DoubleFireballButton" parent="CanvasLayer/Buttons" instance=ExtResource("6_fo5cf")]
layout_mode = 0
offset_left = 232.0
offset_top = 376.0
offset_right = 744.0
offset_bottom = 888.0
scale = Vector2(0.25, 0.25)

[node name="HeartChargeButton" parent="CanvasLayer/Buttons" instance=ExtResource("7_ucawa")]
layout_mode = 0
offset_left = 232.0
offset_top = 512.0
offset_right = 744.0
offset_bottom = 1024.0
scale = Vector2(0.25, 0.25)

[node name="ChargeButton" type="Button" parent="CanvasLayer/Buttons"]
layout_mode = 0
offset_left = -136.0
offset_top = 408.0
offset_right = -29.0
offset_bottom = 467.0
focus_mode = 0
text = "Charge"

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 546.0
offset_top = 506.0
offset_right = 604.0
offset_bottom = 529.0
text = "Player1"

[node name="Sprite" type="Sprite2D" parent="."]
clip_children = 2
texture = ExtResource("10_bm8lq")

[node name="ColorRect" type="ColorRect" parent="Sprite"]
offset_left = -203.0
offset_top = 276.0
offset_right = 162.0
offset_bottom = 373.0
color = Color(0.235294, 0.74902, 0.423529, 0.454902)

[node name="ActionLabel" type="Label" parent="."]
visible = false
offset_left = -32.0
offset_top = -284.0
offset_right = 16.0
offset_bottom = -258.0
text = "action"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wq4l7")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="FireBallSpawnPos" type="Marker2D" parent="."]
position = Vector2(189, -46)

[node name="Area2D" type="Area2D" parent="." groups=["character"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_1yon4")

[node name="backwindMarker2D" type="Marker2D" parent="."]
position = Vector2(-184, 152)

[node name="BowtiePos" type="Node2D" parent="."]

[node name="big_fireball" type="Marker2D" parent="BowtiePos"]
position = Vector2(56, -160)
rotation = 0.261799

[node name="fireball" type="Marker2D" parent="BowtiePos"]
position = Vector2(56, -160)
rotation = 0.261799

[node name="block" type="Marker2D" parent="BowtiePos"]
position = Vector2(-40, -200)
rotation = 0.261799

[node name="charge" type="Marker2D" parent="BowtiePos"]
position = Vector2(-40, -200)

[node name="hitted" type="Marker2D" parent="BowtiePos"]
position = Vector2(-184, -128)
rotation = 0.261799

[node name="idle" type="Marker2D" parent="BowtiePos"]
position = Vector2(-56, -176)
rotation = -0.523598

[connection signal="toggled" from="CanvasLayer/Buttons/FireballButton" to="." method="_on_fireball_button_toggled"]
[connection signal="toggled" from="CanvasLayer/Buttons/BlockButton" to="." method="_on_block_button_toggled"]
[connection signal="toggled" from="CanvasLayer/Buttons/BigFireBallButton" to="." method="_on_big_fire_ball_button_toggled"]
[connection signal="toggled" from="CanvasLayer/Buttons/DoubleFireballButton" to="." method="_on_double_fireball_button_toggled"]
[connection signal="toggled" from="CanvasLayer/Buttons/HeartChargeButton" to="." method="_on_heart_charge_button_toggled"]
[connection signal="button_down" from="CanvasLayer/Buttons/ChargeButton" to="." method="_on_charge_button_button_down"]
[connection signal="current_animation_changed" from="AnimationPlayer" to="." method="_on_animation_player_current_animation_changed"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
